// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Alert (private)/BrieflyDisplay default 1`] = `
<p>
  this text should be displayed for the default time
</p>
`;

exports[`Storyshots Alert (private)/BrieflyDisplay display for 5 seconds 1`] = `
<p>
  This text should be displayed for 5 seconds
</p>
`;
